[gd_scene load_steps=4 format=3 uid="uid://bqbsdq1ahl2dc"]

[ext_resource type="Script" path="res://01_scripts/ui/tv_ui.gd" id="1_02oip"]
[ext_resource type="Theme" uid="uid://bthy66vyauw8r" path="res://02_sprites/themes/tv_ui.tres" id="1_hpfey"]
[ext_resource type="Script" path="res://01_scripts/ui/tv_tab.gd" id="2_yh2qu"]

[node name="TvUi" type="Control" node_paths=PackedStringArray("tabs")]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_top = -1.0
offset_right = 800.0
offset_bottom = 599.0
theme = ExtResource("1_hpfey")
script = ExtResource("1_02oip")
game_scene = "res://00_scenes/tests/game_test.tscn"
tabs = [NodePath("MainMenu"), NodePath("PauseMenu"), NodePath("GameOver"), NodePath("Won"), NodePath("WarmUp")]

[node name="ReferenceRect" type="ReferenceRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
border_width = 3.0

[node name="MainMenu" type="Control" parent="." node_paths=PackedStringArray("buttons")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_yh2qu")
buttons = [NodePath("StartGame"), NodePath("Options"), NodePath("Quit")]

[node name="Background" type="ColorRect" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.583897, 0.534128, 0.698719, 1)

[node name="StartGame" type="Button" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -218.0
offset_right = 165.0
offset_bottom = -98.0
grow_horizontal = 2
grow_vertical = 2
text = "START GAME"

[node name="Options" type="Button" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -60.0
offset_right = 165.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
text = "OPTIONS"

[node name="Quit" type="Button" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = 99.0
offset_right = 165.0
offset_bottom = 219.0
grow_horizontal = 2
grow_vertical = 2
text = "QUIT"

[node name="PauseMenu" type="Control" parent="." node_paths=PackedStringArray("buttons")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_yh2qu")
buttons = [NodePath("Resume"), NodePath("Options")]

[node name="Background" type="ColorRect" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.480054, 0.569266, 0.718026, 1)

[node name="Label" type="Label" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -322.0
offset_top = -254.0
offset_right = 323.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.243062, 0.312865, 0.428871, 1)
theme_override_font_sizes/font_size = 150
text = "PAUSED"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -61.0
offset_right = 165.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
text = "RESUME"

[node name="Options" type="Button" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = 119.0
offset_right = 165.0
offset_bottom = 239.0
grow_horizontal = 2
grow_vertical = 2
text = "OPTIONS"

[node name="GameOver" type="Control" parent="." node_paths=PackedStringArray("buttons")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_yh2qu")
buttons = [NodePath("Restart"), NodePath("Quit")]

[node name="Background" type="ColorRect" parent="GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.72887, 0.483897, 0.55306, 1)

[node name="Label" type="Label" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -322.0
offset_top = -254.0
offset_right = 323.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.400387, 0.229307, 0.280609, 1)
theme_override_font_sizes/font_size = 150
text = "YOU LOST!"
horizontal_alignment = 1

[node name="Restart" type="Button" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -61.0
offset_right = 165.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
text = "RESTART"

[node name="Quit" type="Button" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = 119.0
offset_right = 165.0
offset_bottom = 239.0
grow_horizontal = 2
grow_vertical = 2
text = "QUIT"

[node name="Won" type="Control" parent="." node_paths=PackedStringArray("buttons")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_yh2qu")
buttons = [NodePath("Restart"), NodePath("Quit")]

[node name="Background" type="ColorRect" parent="Won"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.454552, 0.600545, 0.572294, 1)

[node name="Label" type="Label" parent="Won"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -322.0
offset_top = -254.0
offset_right = 323.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.246591, 0.350128, 0.330989, 1)
theme_override_font_sizes/font_size = 150
text = "YOU WON!"
horizontal_alignment = 1

[node name="Restart" type="Button" parent="Won"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -61.0
offset_right = 165.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
text = "RESTART"

[node name="Quit" type="Button" parent="Won"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = 119.0
offset_right = 165.0
offset_bottom = 239.0
grow_horizontal = 2
grow_vertical = 2
text = "QUIT"

[node name="WarmUp" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_yh2qu")

[node name="Background" type="ColorRect" parent="WarmUp"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.329412)

[node name="Label" type="Label" parent="WarmUp"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 531
text = "II"
horizontal_alignment = 1

[node name="Settings" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_yh2qu")

[node name="Background" type="ColorRect" parent="Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.529412)

[node name="CloseSettings" type="Button" parent="Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 311.0
offset_top = -273.0
offset_right = 375.0
offset_bottom = -223.0
grow_horizontal = 2
grow_vertical = 2
text = "X"

[connection signal="pressed" from="MainMenu/StartGame" to="." method="start_game"]
[connection signal="pressed" from="MainMenu/Quit" to="." method="quit_game"]
[connection signal="pressed" from="PauseMenu/Resume" to="." method="resume_game"]
[connection signal="pressed" from="GameOver/Restart" to="." method="restart_game"]
[connection signal="pressed" from="GameOver/Quit" to="." method="quit_game"]
[connection signal="pressed" from="Won/Restart" to="." method="restart_game"]
[connection signal="pressed" from="Won/Quit" to="." method="quit_game"]
[connection signal="pressed" from="Settings/CloseSettings" to="." method="quit_game"]
